# hiya-guard-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: GOOGLE_CALENDAR_SETUP.md  QUICK_START.md  TROUBLESHOOTING.md  test_scenarios.md
src/voiceai/: __main__.py  config.py  main.py
src/voiceai/services/: audio_handler.py  calendar_service.py  llm_service.py  stt_service.py  tts_service.py
src/voiceai/tool_calls/: __init__.py  audio.py  calendar.py  llm.py  stt.py  tts.py
src/voiceai/utils/: verify_setup.py
submission_docs/: Hiya Guard AI - Mohammed Zakriah Ibrahim.pptx  USER_STORIES.md
tests/: test_calendar.py
