[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voiceai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio==0.2.14",
    "webrtcvad==2.0.10",
    "setuptools>=65.0.0",
    "aiohttp==3.9.1",
    "websockets==12.0",
    "assemblyai==0.21.0",
    "openai==1.54.5",
    "elevenlabs==1.8.0",
    "sounddevice==0.4.6",
    "python-dotenv==1.0.0",
    "google-auth-oauthlib==1.2.2",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.185.0",
    "numpy==1.26.2",
    "httpx==0.27.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
